syntax = "proto3";

package songs;

import "google/protobuf/empty.proto";

message Song {
  int32 id = 1;
  string title = 2;
  string artist = 3;
}

message GetSongsResponse {
  repeated Song songs = 1;
}

message AddSongsRequest {
  Song song = 1;
}

message AddSongsResponse {
  Song song = 1;
}

service Songs {
  rpc GetSongs(google.protobuf.Empty) returns (GetSongsResponse) {};
  rpc AddSongs(AddSongsRequest) returns (AddSongsResponse) {};
}
